--- a/MvvmWpfSample/MainWindow.xaml
+++ b/MvvmWpfSample/MainWindow.xaml
@@ -1,12 +1,103 @@
-﻿<Window x:Class="MvvmWpfSample.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MvvmWpfSample"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+﻿<Window
+    x:Class="MvvmWpfSample.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:MvvmWpfSample"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="MainWindow"
+    Width="525"
+    Height="350"
+    mc:Ignorable="d">
+    <Window.Resources>
+        <local:CustomerViewModel x:Key="ViewModel" />
+    </Window.Resources>
+    <Grid DataContext="{Binding Source={StaticResource ViewModel}}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <TextBlock
+            Name="textBlock2"
+            Grid.Row="0"
+            Grid.Column="0"
+            Height="23"
+            Margin="5"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Text="Select a Customer:" />
+        <ComboBox
+            Name="CustomersComboBox"
+            Grid.Row="0"
+            Grid.Column="1"
+            Width="173"
+            Height="23"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Top"
+            DisplayMemberPath="FullName"
+            ItemsSource="{Binding Path=Customers}"
+            SelectedItem="{Binding Path=CurrentCustomer, Mode=TwoWay}" />
+        <TextBlock
+            Name="textBlock4"
+            Grid.Row="1"
+            Grid.Column="0"
+            Height="23"
+            Margin="5"
+            HorizontalAlignment="Right"
+            Text="Customer ID" />
+        <TextBlock
+            Name="textBlock5"
+            Grid.Row="2"
+            Grid.Column="0"
+            Height="23"
+            Margin="5"
+            HorizontalAlignment="Right"
+            Text="Name" />
+        <TextBlock
+            Name="textBlock9"
+            Grid.Row="3"
+            Grid.Column="0"
+            Height="23"
+            Margin="5"
+            HorizontalAlignment="Right"
+            Text="Phone" />
+        <TextBlock
+            Name="CustomerIDTextBlock"
+            Grid.Row="1"
+            Grid.Column="1"
+            Height="23"
+            HorizontalAlignment="Left"
+            Text="{Binding ElementName=CustomersComboBox, Path=SelectedItem.CustomerID}" />
+        <TextBox
+            Grid.Row="2"
+            Grid.Column="1"
+            Width="219"
+            Height="23"
+            HorizontalAlignment="Left"
+            Text="{Binding Path=CurrentCustomer.FullName, Mode=TwoWay}" />
+        <TextBox
+            Grid.Row="3"
+            Grid.Column="1"
+            Width="219"
+            Height="23"
+            HorizontalAlignment="Left"
+            Text="{Binding Path=CurrentCustomer.Phone, Mode=TwoWay}" />
+        <Button
+            Name="UpdateButton"
+            Grid.Row="4"
+            Grid.Column="0"
+            Width="75"
+            Height="23"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Top"
+            Command="{Binding UpdateCustomerCommand}"
+            Content="Update" />
     </Grid>
 </Window>
